--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,14 @@ jobs:
   build:
     name: Build Application
     uses: ./.github/workflows/build.yml
-    secrets: inherit
+    secrets:
+      ACCESS_KEY_ID_AWS: ${{ secrets.ACCESS_KEY_ID_AWS }}
+      SECRET_ACCESS_KEY_AWS: ${{ secrets.SECRET_ACCESS_KEY_AWS }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
   functional-tests:
     needs: build
     name: Run Playwright Tests
     uses: ./.github/workflows/playwright-test.yml
-    secrets: inherit
