I am starting to remember

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,5 @@ jobs:
     needs: build
     name: Run Playwright Tests
     uses: ./.github/workflows/playwright-test.yml
+    with:
+      ENVIRONMENT: test
