--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,9 @@ jobs:
     uses: ./.github/workflows/playwright-test.yml
     with:
       ENVIRONMENT: test
+    secrets: # Passing in is required to set environment secrets correctly but not variables.
+      ACCESS_KEY_ID_AWS: ${{ secrets.ACCESS_KEY_ID_AWS }}
+      SECRET_ACCESS_KEY_AWS: ${{ secrets.SECRET_ACCESS_KEY_AWS }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
