--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Build and Test App
 
 on:
   push:
@@ -21,6 +21,7 @@ jobs:
     uses: ./.github/workflows/playwright-test.yml
     with:
       ENVIRONMENT: test
+      PLAYWRIGHT_PROJECT: e2e-all-browsers
     secrets: # Passing in is required to set environment secrets correctly but not variables.
       ACCESS_KEY_ID_AWS: ${{ secrets.ACCESS_KEY_ID_AWS }}
       SECRET_ACCESS_KEY_AWS: ${{ secrets.SECRET_ACCESS_KEY_AWS }}
