--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
         default: production
-
+jobs:
   functional-tests:
     needs: build
     name: Run Playwright Tests
