--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.6",
+    "@next/third-parties": "^15.5.6",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
