Add run for copilot PRs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: Build and Test App
 on:
   push:
     branches: [ 'feature/**' ]
+  pull_request:
+    branches: [ 'copilot/**' ]
 
 jobs:
   build:
