--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "@aws-sdk/client-secrets-manager": "^3.913.0",
     "@aws-sdk/lib-dynamodb": "^3.913.0",
     "@aws-sdk/util-dynamodb": "^3.913.0",
+    "@mantine/core": "^8.3.5",
+    "@mantine/dates": "^8.3.5",
+    "@mantine/dropzone": "^8.3.5",
+    "@mantine/form": "^8.3.5",
+    "@mantine/hooks": "^8.3.5",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.6",
     "@next/third-parties": "^15.5.6",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "http-status-codes": "^2.3.0",
+    "mantine-form-zod-resolver": "^1.3.0",
     "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "next-mdx-remote-client": "^2.1.7",
