--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-mdx-remote-client": "^2.1.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
