--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^15.5.6",
     "next-auth": "^4.24.11",
     "next-mdx-remote-client": "^2.1.7",
+    "openai": "^6.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
